--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,7 +9,10 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      class="min-h-screen flex grow bg-slate-50 dark:bg-navy-900"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
